--- a/crowd-funding/Anchor.toml
+++ b/crowd-funding/Anchor.toml
@@ -1,7 +1,8 @@
 [features]
 seeds = false
 [programs.localnet]
-crowd_funding = "Fg6PaFpoGXkYsidMpWTK6W2BeZ7FEfcYkg476zPFsLnS"
+crowd_funding = "98iDNvmZNL18JGNS3BPXZgtkBFCxmQM8QYSQff6q7xzN"
+# crowd_funding = "Fg6PaFpoGXkYsidMpWTK6W2BeZ7FEfcYkg476zPFsLnS"
 
 [registry]
 url = "https://anchor.projectserum.com"
@@ -9,6 +10,9 @@ url = "https://anchor.projectserum.com"
 [provider]
 cluster = "localnet"
 wallet = "/Users/stanleylau/.config/solana/id.json"
+# cluster = "devnet"
+# wallet = "./id.json"
+
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
