--- a/nft-drop-starter-project-final-master/app/.env
+++ b/nft-drop-starter-project-final-master/app/.env
@@ -1,3 +1,5 @@
-REACT_APP_CANDY_MACHINE_ID=2hFU8n6risVkUhNJYKixd3XSCje94g5rS7hr1Pz6yFDK
+REACT_APP_CANDY_MACHINE_ID=9STjRcHRa4Jam9fusN984g8jnseH4egn3TAg37SdnioM
+
 REACT_APP_SOLANA_NETWORK=devnet
-REACT_APP_SOLANA_RPC_HOST=https://explorer-api.devnet.solana.com
+REACT_APP_SOLANA_RPC_HOST=https://metaplex.devnet.rpcpool.com/
+SKIP_PREFLIGHT_CHECK=true
