--- a/nft-drop-starter-project-final-master/app/.gitignore
+++ b/nft-drop-starter-project-final-master/app/.gitignore
@@ -1,24 +1,11 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-# .env
-
-# testing
-/coverage
-
-# production
-/build
-
-# misc
+node_modules
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
+*~
+.idea
+.yarn
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.env
+.vscode
+**/.DS_Store
